--- a/package.json
+++ b/package.json
@@ -1,39 +1,41 @@
 {
-  "name": "photo-qa-app",
-  "main": "expo-router/entry",
+  "name": "pip4intelligence",
   "version": "1.0.0",
   "private": true,
+  "description": "A description of your application.",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint",
-    "reset-project": "node ./scripts/reset-project.js",
-    "build:web": "expo export --platform web"
+    "build:web": "expo export --platform web --output-dir dist",
+    "test": "jest",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "reset-project": "node ./scripts/reset-project.js"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2",
-    "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-native-community/datetimepicker": "8.4.4",
+    "@expo/vector-icons": "^15.0.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.4.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
-    "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.17",
-    "@react-navigation/stack": "^7.4.8",
-    "axios": "^1.12.2",
+    "@react-navigation/elements": "^2.6.0",
+    "@react-navigation/native": "^7.1.0",
+    "@react-navigation/stack": "^7.4.0",
+    "axios": "^1.7.2",
     "expo": "~54.0.9",
-    "expo-clipboard": "~8.0.7",
-    "expo-constants": "~18.0.9",
-    "expo-font": "~14.0.8",
-    "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.8",
-    "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.7",
-    "expo-splash-screen": "~31.0.10",
-    "expo-status-bar": "~3.0.8",
-    "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "~15.0.7",
+    "expo-clipboard": "~8.0.0",
+    "expo-constants": "~18.0.0",
+    "expo-font": "~14.0.0",
+    "expo-haptics": "~15.0.0",
+    "expo-image": "~3.0.0",
+    "expo-linking": "~8.0.0",
+    "expo-router": "~6.0.0",
+    "expo-splash-screen": "~31.0.0",
+    "expo-status-bar": "~3.0.0",
+    "expo-symbols": "~1.0.0",
+    "expo-system-ui": "~6.0.0",
+    "expo-web-browser": "~15.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
@@ -44,12 +46,18 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "^0.5.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.0",
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "jest": "^29.2.1",
+    "jest-expo": "~54.0.0",
+    "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2"
-  }
+  },
+  "author": "Your Name <you@example.com>",
+  "license": "MIT"
 }
