--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "build": "expo export --platform web --output-dir build",
     "build:web": "expo export --platform web --output-dir build",
-    "web-build": "expo export --platform web --output-dir build",
+    "vercel-build": "expo export --platform web --output-dir build",
     "lint": "expo lint",
     "reset-project": "node ./scripts/reset-project.js"
   },
